* Fixed prices being selected on RFQ (Chris T, h/t Erik H)
* Fixed discount wrong after multiple parts selection (Chris T, h/T Istvan P)
* Fixed action not found on redirect (Chris T, h/t Brian W)
* Fixed issues upgrading from 1.2 if email and bcc are filled in (Chris T)
* Fixed error exporting aging to csv (Havard S, h/t Nick P, 3559403)

Chris T is Chris Travers
Havard S is Havard Sorli
Erik H is Erik Huelsmann
Istvan P is Istvan Pongracz
Brian W is Brian Wolf 
Nick P is Nick Prater

Changelog for 1.3.22
* Fixed error when trying to save multiple make/models for a part (Chris T)
* Better error handling when date is entered into statement balance (Chris T)
* Added pricegroup selection back to entity credit account (Chris T, 3550056)
* Fix for slow performance with Form->all_years (Chris T, h/t Neil S)[1]
* Revamped database load test cases (Chris T)
* Fixed error on some screens with function not found (Chris T)
* Fixed some test case errors due to tests written against older API (Chris T)
* Fixed error: parts search not loading into the db pn Pg 9.1 only (Chris T)

Chris T is Chris Travers
Neil S is Neil Smith

Footnotes:
[1]:  Problem found on database with approx 200k records spanning a number of
years.  The current approach will do a sequential scan of acc_trans per year
found if no index is there.  Adding the index is required to get this to
perform reasonably well.


Changelog for 1.3.21
* Added a default numberformat in Form.pm (Chris T)
* Added a container div for theming saved and/or posted docs (Chris T)
* Fixed an is_zero error saving purchase transactions (Nick P)
* Fixed shipping selection not displaying customer info (Chris T, 3543932)
* Fixed shipping redirection not displaying orders (Chris T, h/t Nigel T)
* Recon screen now groups journal entries by transaction (Chris T, h/t Nick P)
* Fixed empty string working as empty source for cash recon (Chris T)
* Saving a part now returns to editing the same part (Chris T, h/t Brian W)